<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="25dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plec_txt" />

            <Spinner
                android:id="@+id/opcjaPlci"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/plec_opcje" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wzrost_txt" />

            <EditText
                android:id="@+id/wzrost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/wskazowka_wzrost"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opcja_wzrost_txt" />

            <Spinner
                android:id="@+id/opcjaWzrostu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/wzrost_opcje" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masa_txt" />

            <EditText
                android:id="@+id/masa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/wskazowka_masa"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wiek_txt" />



            <DatePicker
                android:id="@+id/dataUrodzenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/opcja_sposob" />

            <Spinner
                android:id="@+id/opcjaSposob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/sposob_opcje" />

            <Button
                android:id="@+id/przycisk_oblicz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/przycisk_txt" />

            <TextView
                android:id="@+id/ppm_wynik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>